fixes for Ray 1.0.x and removing Bokeh

--- a/ray-rllib/01-Introduction-to-Reinforcement-Learning.ipynb
+++ b/ray-rllib/01-Introduction-to-Reinforcement-Learning.ipynb
@@ -267,8 +267,8 @@
    },
    "outputs": [],
    "source": [
-    "env = gym.make('CartPole-v1')\n",
-    "print('Created env:', env)"
+    "env = gym.make(\"CartPole-v1\")\n",
+    "print(\"Created env:\", env)"
    ]
   },
   {
@@ -298,7 +298,7 @@
    "outputs": [],
    "source": [
     "state = env.reset()\n",
-    "print('The starting state is:', state)"
+    "print(\"The starting state is:\", state)"
    ]
   },
   {
@@ -396,7 +396,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Try rerunning the following cell a few times. How much do the answers change? Note that the maximum possible reward for `CartPole` is 500. You'll probably get numbers under 200."
+    "Try rerunning the following cell a few times. How much do the answers change? Note that the maximum possible reward for `CartPole-v1` is 500. You'll probably get numbers well under 500."
    ]
   },
   {
@@ -415,6 +415,7 @@
    "source": [
     "reward = random_rollout(env)\n",
     "print(reward)\n",
+    "\n",
     "reward = random_rollout(env)\n",
     "print(reward)"
    ]
@@ -527,7 +528,6 @@
    },
    "outputs": [],
    "source": [
-    "# import gym  # imported above already, but listed here for completeness\n",
     "import ray\n",
     "from ray.rllib.agents.ppo import PPOTrainer, DEFAULT_CONFIG\n",
     "from ray.tune.logger import pretty_print"
@@ -550,7 +550,7 @@
    },
    "outputs": [],
    "source": [
-    "ray.init(ignore_reinit_error=True, log_to_driver=False)"
+    "info = ray.init(ignore_reinit_error=True, log_to_driver=False)"
    ]
   },
   {
@@ -575,7 +575,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f'Dashboard URL: http://{ray.get_webui_url()}')"
+    "print(\"Dashboard URL: http://{}\".format(info[\"webui_url\"]))"
    ]
   },
   {
@@ -641,20 +641,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "N=10\n",
+    "N = 10\n",
     "results = []\n",
     "episode_data = []\n",
     "episode_json = []\n",
+    "\n",
     "for n in range(N):\n",
     "    result = agent.train()\n",
     "    results.append(result)\n",
+    "    \n",
     "    episode = {'n': n, \n",
     "               'episode_reward_min':  result['episode_reward_min'],  \n",
     "               'episode_reward_mean': result['episode_reward_mean'], \n",
     "               'episode_reward_max':  result['episode_reward_max'],  \n",
-    "               'episode_len_mean':    result['episode_len_mean']}    \n",
+    "               'episode_len_mean':    result['episode_len_mean']} \n",
+    "    \n",
     "    episode_data.append(episode)\n",
     "    episode_json.append(json.dumps(episode))\n",
+    "    \n",
     "    print(f'{n:3d}: Min/Mean/Max reward: {result[\"episode_reward_min\"]:8.4f}/{result[\"episode_reward_mean\"]:8.4f}/{result[\"episode_reward_max\"]:8.4f}')"
    ]
   },
@@ -688,7 +692,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's plot the data."
+    "Let's plot the data. Since the length and reward means are equal, we'll only plot one line:"
    ]
   },
   {
@@ -697,47 +701,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.append(\"..\")\n",
-    "from util.line_plots import plot_line, plot_line_with_min_max, plot_line_with_stddev"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import bokeh.io\n",
-    "# The next two lines prevent Bokeh from opening the graph in a new window.\n",
-    "bokeh.io.reset_output()\n",
-    "bokeh.io.output_notebook()"
+    "df.plot(x=\"n\", y=[\"episode_reward_mean\", \"episode_reward_min\", \"episode_reward_max\"], secondary_y=True)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since the length and reward means are equal, we'll only plot one line:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_line_with_min_max(df, x_col='n', y_col='episode_reward_mean', min_col='episode_reward_min', max_col='episode_reward_max',\n",
-    "                      title='Episode Rewards', x_axis_label='n', y_axis_label='reward')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "([image](../images/rllib/Cart-Pole-Episode-Rewards.png))\n",
-    "\n",
-    "The model is quickly able to hit the maximum value of 500, but the mean is what's most valueable. After 10 steps, we're more than half way there."
+    "The model is quickly able to hit the maximum value of 500, but the mean is what's most valuable. After 10 steps, we're more than half way there."
    ]
   },
   {
@@ -798,15 +769,14 @@
    "source": [
     "episode_rewards = results[-1]['hist_stats']['episode_reward']\n",
     "df_episode_rewards = pd.DataFrame(data={'episode':range(len(episode_rewards)), 'reward':episode_rewards})\n",
-    "plot_line(df_episode_rewards, x_col='episode', y_col='reward', title='Episode Rewards', x_axis_label='episode', y_axis_label='reward')"
+    "\n",
+    "df_episode_rewards.plot(x=\"episode\", y=\"reward\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "([image](../images/rllib/Cart-Pole-Episode-Rewards2.png))\n",
-    "\n",
     "For a well-trained model, most runs do very well while occasional runs do poorly. Try plotting other results episodes by changing the array index in `results[-1]` to another number between `0` and `9`. (The length of `results` is `10`.)"
    ]
   },
@@ -850,7 +820,7 @@
     "id": "64FmVP7kNlh_"
    },
    "source": [
-    "Train the agent and try to get a reward of 200. If it's training too slowly you may need to modify the config above to use fewer hidden units, a larger `sgd_minibatch_size`, a smaller `num_sgd_iter`, or a larger `num_workers`.\n",
+    "Train the agent and try to get a reward of 500. If it's training too slowly you may need to modify the config above to use fewer hidden units, a larger `sgd_minibatch_size`, a smaller `num_sgd_iter`, or a larger `num_workers`.\n",
     "\n",
     "This should take around `N` = 20 or 30 training iterations."
    ]
@@ -866,19 +836,23 @@
    },
    "outputs": [],
    "source": [
-    "N=5\n",
+    "N = 5\n",
     "results = []\n",
     "episode_data = []\n",
     "episode_json = []\n",
+    "\n",
     "for n in range(N):\n",
     "    result = agent.train()\n",
     "    results.append(result)\n",
+    "    \n",
     "    episode = {'n': n, \n",
     "               'episode_reward_mean': result['episode_reward_mean'], \n",
     "               'episode_reward_max': result['episode_reward_max'],  \n",
-    "               'episode_len_mean': result['episode_len_mean']}    \n",
+    "               'episode_len_mean': result['episode_len_mean']}   \n",
+    "    \n",
     "    episode_data.append(episode)\n",
     "    episode_json.append(json.dumps(episode))\n",
+    "    \n",
     "    print(f'Max reward: {episode[\"episode_reward_max\"]}')"
    ]
   },
@@ -929,7 +903,7 @@
    "outputs": [],
    "source": [
     "trained_config = config.copy()\n",
-    "test_agent = PPOTrainer(trained_config, 'CartPole-v1')\n",
+    "test_agent = PPOTrainer(trained_config, \"CartPole-v1\")\n",
     "test_agent.restore(checkpoint_path)"
    ]
   },
@@ -942,7 +916,7 @@
    "source": [
     "Use the previously-trained policy to act in an environment. The key line is the call to `test_agent.compute_action(state)` which uses the trained policy to choose an action. This is an example of _rollout_, which we'll study in a subsequent lesson.\n",
     "\n",
-    "Verify that the cumulative reward received roughly matches up with the reward printed above. It will be at or near 200."
+    "Verify that the cumulative reward received roughly matches up with the reward printed above. It will be at or near 500."
    ]
   },
   {
@@ -955,7 +929,7 @@
    },
    "outputs": [],
    "source": [
-    "env = gym.make('CartPole-v1')\n",
+    "env = gym.make(\"CartPole-v1\")\n",
     "state = env.reset()\n",
     "done = False\n",
     "cumulative_reward = 0\n",
@@ -974,7 +948,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ray.shutdown()  # \"Undo ray.init()\"."
+    "ray.shutdown()"
    ]
   },
   {
@@ -1006,7 +980,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
