--- a/ray-rllib/explore-rllib/01-Application-Cart-Pole.ipynb
+++ b/ray-rllib/explore-rllib/01-Application-Cart-Pole.ipynb
@@ -50,17 +50,10 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import json, os, shutil, sys"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sys.path.append('../..') # so we can import from \"util\"\n",
-    "from util.line_plots import plot_line, plot_line_with_min_max, plot_line_with_stddev"
+    "import json\n",
+    "import os\n",
+    "import shutil\n",
+    "import sys"
    ]
   },
   {
@@ -79,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "checkpoint_root = 'tmp/ppo/cart'"
+    "checkpoint_root = \"tmp/ppo/cart\""
    ]
   },
   {
@@ -116,7 +109,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ray.init(ignore_reinit_error=True)"
+    "info = ray.init(ignore_reinit_error=True)"
    ]
   },
   {
@@ -132,7 +125,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f'Dashboard URL: http://{ray.get_webui_url()}')"
+    "print(\"Dashboard URL: http://{}\".format(info[\"webui_url\"]))"
    ]
   },
   {
@@ -166,13 +159,14 @@
     "\n",
     "config = ppo.DEFAULT_CONFIG.copy()              # PPO's default configuration. See the next code cell.\n",
     "config[\"log_level\"] = \"WARN\"                    # Suppress too many messages, but try \"INFO\" to see what can be printed.\n",
+    "\n",
     "# Other settings we might adjust:\n",
-    "config['num_workers'] = 1                       # Use > 1 for using more CPU cores, including over a cluster\n",
-    "config['num_sgd_iter'] = 10                     # Number of SGD (stochastic gradient descent) iterations per training minibatch.\n",
+    "config[\"num_workers\"] = 1                       # Use > 1 for using more CPU cores, including over a cluster\n",
+    "config[\"num_sgd_iter\"] = 10                     # Number of SGD (stochastic gradient descent) iterations per training minibatch.\n",
     "                                                # I.e., for each minibatch of data, do this many passes over it to train. \n",
-    "config['sgd_minibatch_size'] = 250              # The amount of data records per minibatch\n",
-    "config['model']['fcnet_hiddens'] = [100, 50]    #\n",
-    "config['num_cpus_per_worker'] = 0  # This avoids running out of resources in the notebook environment when this cell is re-executed"
+    "config[\"sgd_minibatch_size\"] = 250              # The amount of data records per minibatch\n",
+    "config[\"model\"][\"fcnet_hiddens\"] = [100, 50]    #\n",
+    "config[\"num_cpus_per_worker\"] = 0  # This avoids running out of resources in the notebook environment when this cell is re-executed"
    ]
   },
   {
@@ -204,17 +198,21 @@
     "results = []\n",
     "episode_data = []\n",
     "episode_json = []\n",
+    "\n",
     "for n in range(N_ITER):\n",
     "    result = agent.train()\n",
     "    results.append(result)\n",
+    "    \n",
     "    episode = {'n': n, \n",
     "               'episode_reward_min': result['episode_reward_min'], \n",
     "               'episode_reward_mean': result['episode_reward_mean'], \n",
     "               'episode_reward_max': result['episode_reward_max'],  \n",
     "               'episode_len_mean': result['episode_len_mean']}\n",
+    "    \n",
     "    episode_data.append(episode)\n",
     "    episode_json.append(json.dumps(episode))\n",
     "    file_name = agent.save(checkpoint_root)\n",
+    "    \n",
     "    print(f'{n:3d}: Min/Mean/Max reward: {result[\"episode_reward_min\"]:8.4f}/{result[\"episode_reward_mean\"]:8.4f}/{result[\"episode_reward_max\"]:8.4f}. Checkpoint saved to {file_name}')"
    ]
   },
@@ -244,20 +242,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import bokeh.io\n",
-    "# The next two lines prevent Bokeh from opening the graph in a new window.\n",
-    "bokeh.io.reset_output()\n",
-    "bokeh.io.output_notebook()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_line_with_min_max(df, x_col='n', y_col='episode_reward_mean', min_col='episode_reward_min', max_col='episode_reward_max',\n",
-    "                       title='Cart Pole Episode Rewards', x_axis_label = 'n', y_axis_label='reward')"
+    "df.plot(x=\"n\", y=[\"episode_reward_mean\", \"episode_reward_min\", \"episode_reward_max\"], secondary_y=True)"
    ]
   },
   {
@@ -267,8 +252,6 @@
     "id": "Gp1LgeCJjGLk"
    },
    "source": [
-    "([image](../../images/rllib/Cart-Pole-Episode-Rewards3.png))\n",
-    "\n",
     "Also, print out the policy and model to see the results of training in detail…"
    ]
   },
@@ -344,7 +327,7 @@
    "source": [
     "from IPython.display import Video\n",
     "\n",
-    "cart_pole_sample_video='../../images/rllib/Cart-Pole-Example-Video.mp4'\n",
+    "cart_pole_sample_video = \"../../images/rllib/Cart-Pole-Example-Video.mp4\"\n",
     "Video(cart_pole_sample_video)"
    ]
   },
@@ -390,7 +373,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ray.shutdown()  # \"Undo ray.init()\"."
+    "ray.shutdown()"
    ]
   }
  ],
@@ -415,7 +398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
