--- a/ray-rllib/explore-rllib/02-Bipedal-Walker.ipynb
+++ b/ray-rllib/explore-rllib/02-Bipedal-Walker.ipynb
@@ -48,17 +48,10 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import json, os, shutil, sys"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sys.path.append('../..') # so we can import from \"util\"\n",
-    "from util.line_plots import plot_line, plot_line_with_min_max, plot_line_with_stddev"
+    "import json\n",
+    "import os\n",
+    "import shutil\n",
+    "import sys"
    ]
   },
   {
@@ -77,7 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "checkpoint_root = 'tmp/ppo/bipedal-walker'"
+    "checkpoint_root = \"tmp/ppo/bipedal-walker\""
    ]
   },
   {
@@ -94,11 +87,11 @@
    "outputs": [],
    "source": [
     "# Where checkpoints are written:\n",
-    "#shutil.rmtree(checkpoint_root, ignore_errors=True, onerror=None)\n",
+    "shutil.rmtree(checkpoint_root, ignore_errors=True, onerror=None)\n",
     "\n",
     "# Where some data will be written and used by Tensorboard below:\n",
     "ray_results = f'{os.getenv(\"HOME\")}/ray_results/'\n",
-    "#shutil.rmtree(ray_results, ignore_errors=True, onerror=None)"
+    "shutil.rmtree(ray_results, ignore_errors=True, onerror=None)"
    ]
   },
   {
@@ -114,7 +107,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ray.init(ignore_reinit_error=True)"
+    "info = ray.init(ignore_reinit_error=True)"
    ]
   },
   {
@@ -130,7 +123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f'Dashboard URL: http://{ray.get_webui_url()}')"
+    "print(\"Dashboard URL: http://{}\".format(info[\"webui_url\"]))"
    ]
   },
   {
@@ -154,14 +147,15 @@
     "\n",
     "config = ppo.DEFAULT_CONFIG.copy()              # PPO's default configuration. See the next code cell.\n",
     "config[\"log_level\"] = \"WARN\"                    # Suppress too many messages, but try \"INFO\" to see what can be printed.\n",
-    "config['framework'] = \"tf\"                      # TensorFlow\n",
+    "config[\"framework\"] = \"tf\"                      # TensorFlow\n",
+    "\n",
     "# Other settings we might adjust:\n",
-    "config['num_workers'] = 4                       # Use > 1 for using more CPU cores, including over a cluster\n",
-    "config['num_sgd_iter'] = 50                     # Number of SGD (stochastic gradient descent) iterations per training minibatch.\n",
+    "config[\"num_workers\"] = 4                       # Use > 1 for using more CPU cores, including over a cluster\n",
+    "config[\"num_sgd_iter\"] = 50                     # Number of SGD (stochastic gradient descent) iterations per training minibatch.\n",
     "                                                # I.e., for each minibatch of data, do this many passes over it to train. \n",
-    "config['sgd_minibatch_size'] = 250              # The amount of data records per minibatch\n",
-    "config['model']['fcnet_hiddens'] = [512, 512]   # Larger network than we used for CartPole.\n",
-    "config['num_cpus_per_worker'] = 0               # This avoids running out of resources in the notebook environment when this cell is re-executed"
+    "config[\"sgd_minibatch_size\"] = 250              # The amount of data records per minibatch\n",
+    "config[\"model\"][\"fcnet_hiddens\"] = [512, 512]   # Larger network than we used for CartPole.\n",
+    "config[\"num_cpus_per_worker\"] = 0               # This avoids running out of resources in the notebook environment when this cell is re-executed"
    ]
   },
   {
@@ -222,7 +216,7 @@
    },
    "outputs": [],
    "source": [
-    "agent.restore('bipedal-walker-checkpoint/checkpoint-100')"
+    "agent.restore(\"bipedal-walker-checkpoint/checkpoint-100\")"
    ]
   },
   {
@@ -245,17 +239,21 @@
     "results = []\n",
     "episode_data = []\n",
     "episode_json = []\n",
+    "\n",
     "for n in range(N_ITER):\n",
     "    result = agent.train()\n",
     "    results.append(result)\n",
+    "    \n",
     "    episode = {'n': n, \n",
     "               'episode_reward_min': result['episode_reward_min'], \n",
     "               'episode_reward_mean': result['episode_reward_mean'], \n",
     "               'episode_reward_max': result['episode_reward_max'],  \n",
     "               'episode_len_mean': result['episode_len_mean']}\n",
+    "    \n",
     "    episode_data.append(episode)\n",
     "    episode_json.append(json.dumps(episode))\n",
     "    file_name = agent.save(checkpoint_root)\n",
+    "    \n",
     "    print(f'{n:3d}: Min/Mean/Max reward: {result[\"episode_reward_min\"]:8.4f}/{result[\"episode_reward_mean\"]:8.4f}/{result[\"episode_reward_max\"]:8.4f}. Checkpoint saved to {file_name}')"
    ]
   },
@@ -282,18 +280,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import bokeh.io\n",
-    "# The next two lines prevent Bokeh from opening the graph in a new window.\n",
-    "bokeh.io.reset_output()\n",
-    "bokeh.io.output_notebook()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -306,8 +292,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_line_with_min_max(df, x_col='n', y_col='episode_reward_mean', min_col='episode_reward_min', max_col='episode_reward_max',\n",
-    "                       title='Bipel Walker Episode Rewards', x_axis_label = 'n', y_axis_label='reward')"
+    "df.plot(x=\"n\", y=[\"episode_reward_mean\", \"episode_reward_min\", \"episode_reward_max\"], secondary_y=True)"
    ]
   },
   {
@@ -317,8 +302,6 @@
     "id": "Gp1LgeCJjGLk"
    },
    "source": [
-    "([image](../../images/rllib/Bipedal-Walker-Rewards-120.png))\n",
-    "\n",
     "Compare with these images after 50 and 100 iterations. Note the sign of the `reward` in all graphs!\n",
     "\n",
     "After 100 iterations, starting from a checkpoint at 50 (so 50 _new_ iterations):\n",
@@ -412,7 +395,7 @@
    "source": [
     "from IPython.display import Video\n",
     "\n",
-    "sample_video='../../images/rllib/Bipedal-Walker-Example-100.mp4'\n",
+    "sample_video =\"../../images/rllib/Bipedal-Walker-Example-100.mp4\"\n",
     "Video(sample_video, embed=True)"
    ]
   },
@@ -432,7 +415,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ray.shutdown()  # \"Undo ray.init()\"."
+    "ray.shutdown()"
    ]
   },
   {
@@ -477,7 +460,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
