--- a/ray-rllib/explore-rllib/03-Custom-Environments-Reward-Shaping.ipynb
+++ b/ray-rllib/explore-rllib/03-Custom-Environments-Reward-Shaping.ipynb
@@ -28,7 +28,10 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import json, os, shutil, sys\n",
+    "import json\n",
+    "import os\n",
+    "import shutil\n",
+    "import sys\n",
     "import gym\n",
     "\n",
     "import ray\n",
@@ -41,8 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sys.path.append('../..') # so we can import from \"util\"\n",
-    "from util.line_plots import plot_line, plot_line_with_min_max, plot_line_with_stddev"
+    "info = ray.init(ignore_reinit_error=True)"
    ]
   },
   {
@@ -51,16 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ray.init(ignore_reinit_error=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(f'Dashboard URL: http://{ray.get_webui_url()}')"
+    "print(\"Dashboard URL: http://{}\".format(info[\"webui_url\"]))"
    ]
   },
   {
@@ -158,11 +151,19 @@
    "outputs": [],
    "source": [
     "counts = {key:0 for key in range(10)}\n",
-    "counts\n",
-    "\n",
+    "counts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "for i in range(200):\n",
     "    key = spaces.Discrete(10).sample()\n",
     "    counts[key] = counts[key] + 1\n",
+    "\n",
     "counts"
    ]
   },
@@ -349,10 +350,13 @@
     "def do_training(chainEnvClass, config = trainer_config, iterations=20):\n",
     "    trainer = PPOTrainer(config, chainEnvClass)\n",
     "    print(f'Training iterations: ', end='')\n",
+    "    \n",
     "    for i in range(iterations):\n",
     "        print('.', end='')\n",
     "        trainer.train()\n",
+    "        \n",
     "    print('')\n",
+    "    \n",
     "    return trainer"
    ]
   },
@@ -485,6 +489,7 @@
     "done = False\n",
     "max_state = -1\n",
     "cumulative_reward = 0\n",
+    "\n",
     "while not done:\n",
     "    action = trainer.compute_action(state)\n",
     "    state, reward, done, results = env.step(action)\n",
@@ -493,8 +498,10 @@
     "\n",
     "print(f'Cumulative reward you received is: {cumulative_reward}!')\n",
     "print(f'Max state you visited is: {max_state}. (There are {env.n} states.)')\n",
+    "\n",
     "desired = env.done_percentage\n",
     "actual = (max_state+1)/env.n  # add one because of zero indexing\n",
+    "\n",
     "print(f\"This policy traversed {actual*100:4.1f}% of the available states.\")\n",
     "assert actual > desired, f\"{actual*100:4.1f}% is less than the desired percentage of {desired*100:4.1f}%.\""
    ]
@@ -505,15 +512,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ray.shutdown()  # \"Undo ray.init()\"."
+    "ray.shutdown()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -532,7 +532,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
