--- a/ray-rllib/explore-rllib/solutions/Explore-RLlib-Solutions.ipynb
+++ b/ray-rllib/explore-rllib/solutions/Explore-RLlib-Solutions.ipynb
@@ -24,7 +24,9 @@
     "import gym\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import json, sys, os"
+    "import json\n",
+    "import sys\n",
+    "import os"
    ]
   },
   {
@@ -44,8 +46,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env = gym.make('CartPole-v1')\n",
-    "print('Created env:', env)"
+    "env = gym.make(\"CartPole-v1\")\n",
+    "print(\"Created env:\", env)"
    ]
   },
   {
@@ -78,8 +80,15 @@
     "    return 0 if state[0] < 0 else 1\n",
     "\n",
     "def sample_policy2(state):\n",
-    "    return 1 if state[0] < 0 else 0\n",
-    "\n",
+    "    return 1 if state[0] < 0 else 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "reward1 = np.mean([rollout_policy(env, sample_policy1) for _ in range(100)])\n",
     "reward2 = np.mean([rollout_policy(env, sample_policy2) for _ in range(100)])\n",
     "\n",
@@ -135,11 +144,11 @@
    "outputs": [],
    "source": [
     "config = DEFAULT_CONFIG.copy()\n",
-    "config['num_workers'] = 3\n",
-    "config['num_sgd_iter'] = 10                       # was 30\n",
-    "config['sgd_minibatch_size'] = 256                # was 128\n",
-    "config['model']['fcnet_hiddens'] = [20, 20]       # was [100, 100]\n",
-    "config['num_cpus_per_worker'] = 0"
+    "config[\"num_workers\"] = 3\n",
+    "config[\"num_sgd_iter\"] = 10                       # was 30\n",
+    "config[\"sgd_minibatch_size\"] = 256                # was 128\n",
+    "config[\"model\"][\"fcnet_hiddens\"] = [20, 20]       # was [100, 100]\n",
+    "config[\"num_cpus_per_worker\"] = 0"
    ]
   },
   {
@@ -148,7 +157,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "agent = PPOTrainer(config, 'CartPole-v1')"
+    "agent = PPOTrainer(config, \"CartPole-v1\")"
    ]
   },
   {
@@ -157,20 +166,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "N=20                # was 10\n",
+    "N = 20                # was 10\n",
     "results = []\n",
     "episode_data = []\n",
     "episode_json = []\n",
+    "\n",
     "for n in range(N):\n",
     "    result = agent.train()\n",
     "    results.append(result)\n",
+    "    \n",
     "    episode = {'n': n, \n",
     "               'episode_reward_min': result['episode_reward_min'],  \n",
     "               'episode_reward_mean': result['episode_reward_mean'], \n",
     "               'episode_reward_max': result['episode_reward_max'],  \n",
-    "               'episode_len_mean': result['episode_len_mean']}    \n",
+    "               'episode_len_mean': result['episode_len_mean']\n",
+    "              }\n",
+    "    \n",
     "    episode_data.append(episode)\n",
     "    episode_json.append(json.dumps(episode))\n",
+    "    \n",
     "    print(f'{n:3d}: Min/Mean/Max reward: {result[\"episode_reward_min\"]:8.4f}/{result[\"episode_reward_mean\"]:8.4f}/{result[\"episode_reward_max\"]:8.4f}')"
    ]
   },
@@ -190,33 +204,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.append(\"../../..\")\n",
-    "from util.line_plots import plot_line, plot_line_with_min_max\n",
-    "\n",
-    "import bokeh.io\n",
-    "# The next two lines prevent Bokeh from opening the graph in a new window.\n",
-    "bokeh.io.reset_output()\n",
-    "bokeh.io.output_notebook()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_line_with_min_max(df, x_col='n', y_col='episode_reward_mean', min_col='episode_reward_min', max_col='episode_reward_max',\n",
-    "                      title='Episode Rewards', x_axis_label='n', y_axis_label='reward')"
+    "df.plot(x=\"n\", y=[\"episode_reward_mean\", \"episode_reward_min\", \"episode_reward_max\"], secondary_y=True)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "([image](../../../images/rllib/Cart-Pole-Episode-Rewards-Exercise.png))\n",
-    "\n",
-    "Compare this graph with the graph in the lesson, where we used a stronger network:\n",
+    "Compare your graph with the graph in the lesson, where we used more computing resources:\n",
     "\n",
     "![](../../../images/rllib/Cart-Pole-Episode-Rewards.png)\n",
     "\n",
@@ -392,11 +387,13 @@
    "source": [
     "def do_training(chainEnvClass, config = trainer_config, iterations=20):\n",
     "    trainer = PPOTrainer(config, chainEnvClass)\n",
-    "    print(f'Training iterations: ', end='')\n",
+    "    print(\"Training iterations: \", end=\"\")\n",
+    "    \n",
     "    for i in range(iterations):\n",
-    "        print('.', end='')\n",
+    "        print(\".\", end=\"\")\n",
     "        trainer.train()\n",
-    "    print('')\n",
+    "        \n",
+    "    print(\"\")\n",
     "    return trainer"
    ]
   },
@@ -468,6 +465,7 @@
     "done = False\n",
     "max_state = -1\n",
     "cumulative_reward = 0\n",
+    "\n",
     "while not done:\n",
     "    action = trainer.compute_action(state)\n",
     "    state, reward, done, results = env.step(action)\n",
@@ -476,8 +474,10 @@
     "\n",
     "print(f'Cumulative reward you received is: {cumulative_reward}!')\n",
     "print(f'Max state you visited is: {max_state}. (There are {env.n} states.)')\n",
+    "\n",
     "desired = env.done_percentage\n",
     "actual = (max_state+1)/env.n  # add one because of zero indexing\n",
+    "\n",
     "print(f\"This policy traversed {actual*100:4.1f}% of the available states.\")\n",
     "assert actual >= desired, f\"{actual*100:4.1f}% is less than the desired percentage of {desired*100:4.1f}%.\""
    ]
@@ -495,7 +495,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ray.shutdown()  # \"Undo ray.init()\"."
+    "ray.shutdown()"
    ]
   }
  ],
@@ -515,7 +515,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
