--- a/ray-rllib/recsys/01-Recsys.ipynb
+++ b/ray-rllib/recsys/01-Recsys.ipynb
@@ -823,7 +823,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ray.init(ignore_reinit_error=True)"
+    "info = ray.init(ignore_reinit_error=True)"
    ]
   },
   {
@@ -1010,25 +1010,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercises\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 1\n",
     "\n",
-    "For the exercises, there are several ways to modify the Gym environment or the RLlib training parameters, then compare how the outcomes differ:\n",
+    "Compare use of the other datasets `\"jester-data-2.csv\"` and `\"jester-data-3.csv\"` by substituting them during the rollout.\n",
     "\n",
-    "  1. Re-run using smaller and larger K values\n",
-    "  2. Adjust the rewards for depleted and unrated actions\n",
-    "  3. Increase the number of training iterations\n",
-    "  4. Compare use of the other dataset partitions during rollout: `\"jester-data-2.csv\"` or `\"jester-data-3.csv\"`\n",
+    "How do the mean cumulative reward differ from the metrics in the lesson?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 2\n",
     "\n",
-    "For each of these variations compare:\n",
+    "Compare the effect of using a larger `K` value for the number of clusters.\n",
+    "\n",
+    "Show the difference, if any, by comparing:\n",
     "\n",
     "  * baseline with random actions \n",
     "  * baseline with the naïve strategy\n",
     "  * predicted average reward from training\n",
-    "  * stats from the rollout\n",
-    "\n",
-    "Let's discuss the results as a group.\n",
-    "\n",
-    "Other questions to discuss:\n",
+    "  * stats from the rollout"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Discussion Questions\n",
     "\n",
     "  1. In what ways could the \"warm start\" be improved?\n",
     "  2. How could this code be modified to scale to millions of users?  Or to thousands of items?"
