--- a/ray-rllib/explore-rllib/extras/Extra-Application-Mountain-Car.ipynb
+++ b/ray-rllib/explore-rllib/extras/Extra-Application-Mountain-Car.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "![Anyscale Academy](../../../images/AnyscaleAcademyLogo.png)\n",
     "\n",
-    "This example uses [RLlib](https://ray.readthedocs.io/en/latest/rllib.html) to train a policy with the `MountainCar-v0` environment, ([gym.openai.com/envs/MountainCar-v0/]. The idea is that a cart starts at an arbitrar point on a hill. Without any \"pushes\", it will rock back and forth between the two sides of the valley below, never rising above the starting point. However, there are three actions, accelerate to the left (by some unit), accelerate to the right, or apply no acceleration. Timing accelerations in the appropriate directions at the appropriate steps is the key to getting to the top of the hill.\n",
+    "This example uses [RLlib](https://ray.readthedocs.io/en/latest/rllib.html) to train a policy with the `MountainCar-v0` environment, ([gym.openai.com/envs/MountainCar-v0/](gym.openai.com/envs/MountainCar-v0/)). The idea is that a cart starts at an arbitrar point on a hill. Without any \"pushes\", it will rock back and forth between the two sides of the valley below, never rising above the starting point. However, there are three actions, accelerate to the left (by some unit), accelerate to the right, or apply no acceleration. Timing accelerations in the appropriate directions at the appropriate steps is the key to getting to the top of the hill.\n",
     "\n",
     "The primary idea demonstrated in this lesson is how to start from a previous checkpoint. A checkpoint is provided in the `mountain-car-checkpoint` directory, captured after 200 training episodes. Still, the with the provided checkpoint and addition training of 50 episodes, the cart is unable to reach the top.\n",
     "\n",
@@ -40,7 +40,10 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import json, os, shutil, sys\n",
+    "import json\n",
+    "import os\n",
+    "import shutil\n",
+    "import sys\n",
     "import ray\n",
     "import ray.rllib.agents.ppo as ppo"
    ]
@@ -51,7 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ray.init(ignore_reinit_error=True)"
+    "info = ray.init(ignore_reinit_error=True)"
    ]
   },
   {
@@ -67,7 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f'Dashboard URL: http://{ray.get_webui_url()}')"
+    "print(\"Dashboard URL: http://{}\".format(info[\"webui_url\"]))"
    ]
   },
   {
@@ -121,7 +124,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "checkpoint_root = 'tmp/ppo/mountain-car'\n",
+    "checkpoint_root = \"tmp/ppo/mountain-car\"\n",
     "shutil.rmtree(checkpoint_root, ignore_errors=True, onerror=None)   # clean up old runs"
    ]
   },
@@ -191,7 +194,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "agent.restore('mountain-car-checkpoint/checkpoint-20')"
+    "agent.restore(\"mountain-car-checkpoint/checkpoint-20\")"
    ]
   },
   {
@@ -209,14 +212,18 @@
     "for n in range(N_ITER):\n",
     "    result = agent.train()\n",
     "    results.append(result)\n",
+    "    \n",
     "    episode = {'n': n, \n",
     "               'episode_reward_min': result['episode_reward_min'], \n",
     "               'episode_reward_mean': result['episode_reward_mean'], \n",
     "               'episode_reward_max': result['episode_reward_max'],  \n",
-    "               'episode_len_mean': result['episode_len_mean']}\n",
+    "               'episode_len_mean': result['episode_len_mean']\n",
+    "              }\n",
+    "    \n",
     "    episode_data.append(episode)\n",
     "    episode_json.append(json.dumps(episode))\n",
     "    file_name = agent.save(checkpoint_root)\n",
+    "    \n",
     "    print(f'{n+1:3d}: Min/Mean/Max reward: {result[\"episode_reward_min\"]:8.4f}/{result[\"episode_reward_mean\"]:8.4f}/{result[\"episode_reward_max\"]:8.4f}, len mean: {result[\"episode_len_mean\"]:8.4f}. Checkpoint saved to {file_name}')"
    ]
   },
@@ -255,7 +262,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ray.shutdown()  # \"Undo ray.init()\"."
+    "ray.shutdown()"
    ]
   },
   {
@@ -325,7 +332,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
