--- a/ray-rllib/explore-rllib/extras/Extra-Application-Taxi.ipynb
+++ b/ray-rllib/explore-rllib/extras/Extra-Application-Taxi.ipynb
@@ -25,7 +25,10 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import json, os, shutil, sys\n",
+    "import json\n",
+    "import os\n",
+    "import shutil\n",
+    "import sys\n",
     "import ray\n",
     "import ray.rllib.agents.ppo as ppo"
    ]
@@ -36,7 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ray.init(ignore_reinit_error=True)"
+    "info = ray.init(ignore_reinit_error=True)"
    ]
   },
   {
@@ -45,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f'Dashboard URL: http://{ray.get_webui_url()}')"
+    "print(\"Dashboard URL: http://{}\".format(info[\"webui_url\"]))"
    ]
   },
   {
@@ -61,7 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "checkpoint_root = 'tmp/ppo/taxi'\n",
+    "checkpoint_root = \"tmp/ppo/taxi\"\n",
     "shutil.rmtree(checkpoint_root, ignore_errors=True, onerror=None)   # clean up old runs"
    ]
   },
@@ -107,16 +110,19 @@
     "for n in range(N_ITER):\n",
     "    result = agent.train()\n",
     "    results.append(result)\n",
+    "    \n",
     "    episode = {'n': n, \n",
     "               'episode_reward_min': result['episode_reward_min'], \n",
     "               'episode_reward_mean': result['episode_reward_mean'], \n",
     "               'episode_reward_max': result['episode_reward_max'],  \n",
-    "               'episode_len_mean': result['episode_len_mean']}\n",
+    "               'episode_len_mean': result['episode_len_mean']\n",
+    "              }\n",
+    "    \n",
     "    episode_data.append(episode)\n",
     "    episode_json.append(json.dumps(episode))\n",
     "    file_name = agent.save(checkpoint_root)\n",
-    "    print(f'{n+1:3d}: Min/Mean/Max reward: {result[\"episode_reward_min\"]:8.4f}/{result[\"episode_reward_mean\"]:8.4f}/{result[\"episode_reward_max\"]:8.4f}, len mean: {result[\"episode_len_mean\"]:8.4f}. Checkpoint saved to {file_name}')\n",
-    "reward_history = []"
+    "    \n",
+    "    print(f'{n+1:3d}: Min/Mean/Max reward: {result[\"episode_reward_min\"]:8.4f}/{result[\"episode_reward_mean\"]:8.4f}/{result[\"episode_reward_max\"]:8.4f}, len mean: {result[\"episode_len_mean\"]:8.4f}. Checkpoint saved to {file_name}')"
    ]
   },
   {
@@ -244,7 +250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
