tested with beta.anyscale.com

--- a/ray-rllib/multi-armed-bandits/04-Linear-Upper-Confidence-Bound.ipynb
+++ b/ray-rllib/multi-armed-bandits/04-Linear-Upper-Confidence-Bound.ipynb
@@ -169,7 +169,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ray.init(ignore_reinit_error=True)"
+    "info = ray.init(ignore_reinit_error=True)"
    ]
   },
   {
@@ -275,7 +275,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.plot(y=\"mean\", yerr=\"std\", xlabel=\"steps\", ylabel=\"regret\", title=\"Cumulative Regret\")"
+    "df.plot(y=\"mean\", yerr=\"std\", title=\"Cumulative Regret\")"
    ]
   },
   {
