--- a/ray-rllib/multi-armed-bandits/05-Linear-Thompson-Sampling.ipynb
+++ b/ray-rllib/multi-armed-bandits/05-Linear-Thompson-Sampling.ipynb
@@ -233,7 +233,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "regrets.plot(y=\"mean\", yerr=\"std\", xlabel=\"steps\", title=\"Cumulative Regrets\")"
+    "regrets.plot(y=\"mean\", title=\"Cumulative Regrets\")"
    ]
   },
   {
