--- a/ray-rllib/multi-armed-bandits/06-Market-Example.ipynb
+++ b/ray-rllib/multi-armed-bandits/06-Market-Example.ipynb
@@ -538,7 +538,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rewards.plot(y=[\"mean\", \"max\"], secondary_y=True, title=\"Rewards vs. Steps\", xlabel=\"step\")"
+    "rewards.plot(y=[\"mean\", \"max\"], secondary_y=True, title=\"Rewards vs. Steps\")"
    ]
   },
   {
@@ -567,7 +567,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "regrets.plot(y=\"mean\", yerr=\"std\", title=\"Regrets vs. Steps\", xlabel=\"step\")"
+    "regrets.plot(y=\"mean\", yerr=\"std\", title=\"Regrets vs. Steps\")"
    ]
   },
   {
