--- a/ray-crash-course/01-Ray-Tasks.ipynb
+++ b/ray-crash-course/01-Ray-Tasks.ipynb
@@ -197,7 +197,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f'Dashboard URL: http://{ray.get_webui_url()}')"
+    "print(f'Dashboard URL: http://{ray.get_dashboard_url()}')"
    ]
   },
   {
