--- a/ray-serve/02-Ray-Serve-Example.ipynb
+++ b/ray-serve/02-Ray-Serve-Example.ipynb
@@ -89,6 +89,8 @@
     "import json\n",
     "import numpy as np\n",
     "\n",
+    
+    "import sklearn\n",
     "from sklearn.datasets import load_iris\n",
     "from sklearn.ensemble import GradientBoostingClassifier\n",
     "from sklearn.metrics import mean_squared_error"
