update to `get_dashboard_url`

--- a/ray-crash-course/02-Ray-Actors.ipynb
+++ b/ray-crash-course/02-Ray-Actors.ipynb
@@ -481,7 +481,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f'New port? http://{ray.get_webui_url()}')"
+    "print(f'New port? http://{ray.get_dashboard_url()}')"
    ]
   },
   {
