--- a/ray-rllib/01-Introduction-to-Reinforcement-Learning.ipynb
+++ b/ray-rllib/01-Introduction-to-Reinforcement-Learning.ipynb
@@ -550,7 +550,8 @@
    },
    "outputs": [],
    "source": [
-    "info = ray.init(ignore_reinit_error=True, log_to_driver=False)"
+    "info = ray.init(ignore_reinit_error=True, log_to_driver=False)\n",
+    "print(info)"
    ]
   },
   {
