--- a/ray-crash-course/04-Ray-Multiprocessing.ipynb
+++ b/ray-crash-course/04-Ray-Multiprocessing.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Ray Crash Course - Python Multiprocessing with Ray\n",
     "\n",
-    "© 2019-2020, Anyscale. All Rights Reserved\n",
+    "© 2019-2021, Anyscale. All Rights Reserved\n",
     "\n",
     "![Anyscale Academy](../images/AnyscaleAcademyLogo.png)\n",
     "\n",
@@ -52,7 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f'Dashboard URL: http://{ray.get_webui_url()}')"
+    "print(f'Dashboard URL: http://{ray.get_dashboard_url()}')"
    ]
   },
   {
@@ -485,7 +485,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   },
   "toc": {
    "base_numbering": 1,
